[package]
name = "bump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.5.0"
dirs = "5.0.1"
pareg = "0.6.1"
rand = "0.8.5"
raplay = "0.3.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
termint = "0.5.0"
thiserror = "2.0.9"
tokio = { version = "1.40.0", features = ["full"] }
